_kubernetes/diffusion-pop-quiz.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diffusion-pop-quiz

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diffusion-pop-quiz
  namespace: diffusion-pop-quiz
  labels:
    chal: diffusion-pop-quiz
spec:
  selector:
    matchLabels:
      chal: diffusion-pop-quiz
  template:
    metadata:
      labels:
        chal: diffusion-pop-quiz
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
      containers:
      - name: diffusion-pop-quiz
          requests:
            cpu: 1
            memory: 500Mi
          limits:
            cpu: 2
            memory: 1Gi
        ports:
        - containerPort: 5000
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

---
apiVersion: v1
kind: Service
metadata:
  name: diffusion-pop-quiz
  namespace: diffusion-pop-quiz
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    chal: diffusion-pop-quiz


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: diffusion-pop-quiz
spec:
  podSelector:
    matchLabels:
      chal: diffusion-pop-quiz
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}  # Allow traffic only from within the same namespace
    - ipBlock:
        cidr: 0.0.0.0/0  # Allow traffic from the internet (for the load balancer)
  egress:
  - to:
    - namespaceSelector: {}  # Block traffic to other namespaces

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-internet
  namespace: diffusion-pop-quiz
spec:
  podSelector:
    matchLabels:
      chal: diffusion-pop-quiz
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}  # Allow traffic within the same namespace
  - to:
    ports:
    - protocol: UDP
      port: 53  # Allow DNS traffic for name resolution
