_kubernetes/logmein1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logmein1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logmein1
  namespace: logmein1
  labels:
    chal: logmein1
spec:
  selector:
    matchLabels:
      chal: logmein1
  template:
    metadata:
      labels:
        chal: logmein1
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
      - name: logmein1
        resources:
          requests:
            cpu: 2
            memory: 2Gi
          limits:
            cpu: 4
            memory: 4Gi
        ports:
        - containerPort: 10086
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: temp-storage
          mountPath: /tmp
      volumes:
      - name: temp-storage
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: logmein1
  namespace: logmein1
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:058264123223:certificate/614551b1-8738-4648-9db2-9fb2b502f715
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 10086
  selector:
    chal: logmein1

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: logmein1
spec:
  podSelector:
    matchLabels:
      chal: logmein1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}  # Allow traffic only from within the same namespace
    - ipBlock:
        cidr: 0.0.0.0/0  # Allow traffic from the internet (for the load balancer)
  egress:
  - to:
    - namespaceSelector: {}  # Block traffic to other namespaces
